--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "private": true,
   "dependencies": {
     "@cap-js/hana": "^2",
+    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.61",
     "@langchain/google-genai": "^0.2.14",
     "@sap-cloud-sdk/http-client": "^4.0.2",
     "@sap-cloud-sdk/util": "^4.0.2",
@@ -17,7 +19,9 @@
     "dotenv": "^17.0.0",
     "express": "^4",
     "hdb": "^0.19.12",
-    "passport": "^0.7.0"
+    "langchain": "^0.3.29",
+    "passport": "^0.7.0",
+    "pdf-parse": "^1.1.1"
   },
   "engines": {
     "node": ">=20"
